Estilos formulario sign-up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <div><%= alert %></div>
+    <%= notice %>
+    <%= alert %>
     <header class="p-2 bg-light">
             <%= render 'layouts/nav/public' %>
     </header>
