--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,43 @@
-<h2>Sign up</h2>
+<div class="container form-devise">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="form-outline mb-4">
+        <%= f.label :first_name %> <br>
+        <%= f.text_field :first_name, autofocus: true, class:"form-control" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="form-outline mb-4">
+        <%= f.label :last_name %> <br>
+        <%= f.text_field :last_name, autofocus: true, class:"form-control"%>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="form-outline mb-4">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
+      </div>
 
-<%= render "devise/shared/links" %>
+      <div class="form-outline mb-4">
+        <%= f.label :password %>
+        
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <br />
+        <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+      </div>
+
+      <div class="form-outline mb-4">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+      </div>
+
+        <%= f.submit "Sign up", class:"btn btn-primary btn-block mb-4" %>
+          <div>
+            <%= render "devise/shared/links" %>
+          </div>
+</div>
+    <% end %>
+
+
