Formularios log in y sign up funcionales y cambios en el navbar para usuarios logeados

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <%= notice %>
-    <%= alert %>
+    <div><%= notice %>
+    <%= alert %></div>
     <header class="p-2 bg-light">
             <%= render 'layouts/nav/public' %>
     </header>
