--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -23,9 +23,16 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+      <% if account_signed_in? %>
+        <%= link_to "Log out", destroy_account_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class:"nav-link" %>
+      <% else %>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <%= link_to "Sign up", new_account_registration_path, class:"nav-link" %>
       </li>
+      <li class="nav-item">
+        <%= link_to "Log in", new_account_session_path, class:"nav-link" %>
+      </li>
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
