--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -13,35 +13,35 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="my-5">
     <%= form.label :address %>
-    <%= form.text_field :address, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :address, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="my-5">
     <%= form.label :price %>
-    <%= form.number_field :price, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.number_field :price, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="my-5">
     <%= form.label :rooms %>
-    <%= form.number_field :rooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.number_field :rooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="my-5">
     <%= form.label :square_meters %>
-    <%= form.number_field :square_meters, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.number_field :square_meters, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="my-5">
     <%= form.label :bathrooms %>
-    <%= form.number_field :bathrooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.number_field :bathrooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium cursor-pointer btn-success" %>
   </div>
 <% end %>
