--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -5,10 +5,37 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Properties</h1>
-    <%= link_to 'New property', new_property_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="properties" class="min-w-full">
-    <%= render @properties %>
+    <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>Address</th>
+      <th>Price</th>
+      <th>Rooms</th>
+      <th>Bathrooms</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @properties.each do |property| %>
+    <tr>
+      <td><%= property.name %></td>
+      <td><%= property.address %></td>
+      <td><%= property.price %></td>
+      <td><%= property.rooms %></td>
+      <td><%= property.bathrooms %></td>
+      <td><%= link_to "Show this property", property, class: "" %></td>
+      <td><%= link_to 'Edit this property', edit_property_path(property), class: "" %></td>
+      <td><%= link_to "Destroy", property, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+    <%= link_to 'New property', new_property_path, class: "rounded-lg py-3 px-5 nav-button" %>
+
   </div>
 </div>
