--- a/app/views/layouts/nav/_sidebar.html.erb
+++ b/app/views/layouts/nav/_sidebar.html.erb
@@ -1,9 +1,6 @@
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+        <nav class="col-md-2 mt-5 d-none d-md-block bg-light sidebar">
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
-            <li class="nav-item">
-                <%= link_to "Dashboard", dashboard_path, class:"nav-link" %>
-              </li>
               <li class="nav-item">
                 <%= link_to "Dashboard", dashboard_path, class:"nav-link" %>
               </li>
