--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -35,7 +35,7 @@
     <% end %>
   </tbody>
 </table>
-    <%= link_to 'New property', new_property_path, class: "rounded-lg py-3 px-5 nav-button" %>
+    <%= link_to 'New property', new_property_path, class: "btn btn-primary" %>
 
   </div>
 </div>
