--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
   </head>
 
-  <body>
+  <body id="<%= controller.controller_name %>" class="<%= controller.controller_name %>">
 
     <% if ["public", "devise", "sessions"].include?(controller.controller_name) %>
     <header class="p-2 bg-light">
@@ -24,6 +24,7 @@
       <%= render 'layouts/footer' %>
     </footer>
     <% else %>
+    
       <%= render "layouts/nav/dashboard" %>
     <div class="container-fluid">
       <div class="row">
@@ -34,7 +35,7 @@
           <%= yield %>
     </main>
     <% end %>
-    
+      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   </body>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
