--- a/app/views/layouts/nav/_dashboard.html.erb
+++ b/app/views/layouts/nav/_dashboard.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-2">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Tu hogar</a>
+<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap" id="dashboard">
+      <%= link_to "Home", root_path, class:"nav-link text-white p-2" %>
       <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
