--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -16,6 +16,10 @@
     <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
+  <div>
+    <%= form.file_field :images, multiple: true %>
+  </div>
+
   <div class="my-5">
     <%= form.label :address %>
     <%= form.text_field :address, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
