--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -16,6 +16,7 @@
       <th>Price</th>
       <th>Rooms</th>
       <th>Bathrooms</th>
+      <th>Images</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,6 +29,7 @@
       <td><%= property.price %></td>
       <td><%= property.rooms %></td>
       <td><%= property.bathrooms %></td>
+      <td><%= property.images.count %></td>
       <td><%= link_to "Show this property", property, class: "" %></td>
       <td><%= link_to 'Edit this property', edit_property_path(property), class: "" %></td>
       <td><%= link_to "Destroy", property, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
