--- a/app/views/properties/_latest_properties.html.erb
+++ b/app/views/properties/_latest_properties.html.erb
@@ -1,9 +1,13 @@
 <% @properties.each do |property| %>
-    <div class="col-3">
-        <% if  property.images.attached? %> 
-            <% property.images.each do |p|   %> 
-            <%= image_tag(p) %>
-            <% end %>
-        <% end %>
+    <div class="col-4">
+        <%= link_to(property_main(property), property_path(property)) %>
+        <h2><%= property.name %></h2>
+        <p><%= property.address %></p>
+        <div class="amenities">
+            <span><%= property.bathrooms %> <i data-feather="droplet"></i> </span>
+            <span><%= property.square_meters %></span>
+            <span><%= property.rooms %></span>
+        </div>
+        <%= link_to "More info", property_path(property) %>
     </div>
 <% end %>
