--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/">
   </head>
 
-  <body id="<%= controller.controller_name %>" class="<%= controller.controller_name %>">
+  <body id="<%= controller.controller_name %>" class="<%= controller.controller_name %> <%= "show-sidebar" if @show_sidebar.present? %>">
 
-    <% if ["public", "devise", "sessions"].include?(controller.controller_name) %>
+    <% if @show_sidebar.nil? %>
     <header class="p-2 bg-light">
       <%= render 'layouts/nav/public' %>
     </header>
