Agregado carrousel properties details

--- a/app/views/properties/_agent_details.html.erb
+++ b/app/views/properties/_agent_details.html.erb
@@ -1,6 +1,6 @@
-<div>
-    <%= @agent.full_name %> 
-    <%= @agent.company  %> 
+<div class="">
+    <h3>    <%= @agent.first_name%></h3> 
+    <p><%= @agent.company %></p> 
 
-    <button class="btn btn-info">Contact</button>
+    <button class="btn btn-info">Contact for more details</button>
 </div>
