--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -1,7 +1,25 @@
-<div class="property-main-photo" style="background-image:url('<%= property_image_url(property)%>')">
-  <div class="photo-overlay">
+  <div id="carouselExampleControls" class="carousel slide mb-5" data-ride="carousel">
+  <div class="carousel-inner bg-black">
+    <div class="carousel-item active ">
+      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon black  " aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+
 
 <div class="container">
   <div class="row">
@@ -38,7 +56,7 @@
 
     </div>
 
-    <div class="col-4">
+    <div class="col-3">
       <%= render "properties/agent_details" %>
     </div>
   </div>
