--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -45,6 +45,11 @@
     <%= form.number_field :bathrooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
   </div>
 
+  <div class="my-5">
+    <%= form.label :parking_spaces %>
+    <%= form.number_field :parking_spaces, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
+  </div>
+
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium cursor-pointer btn-success" %>
   </div>
