Front end show properties fixes y styles

--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -1,3 +1,32 @@
 .carrousel {
   margin: auto;
 }
+
+// Collapse Property
+
+#module {
+  width: 800px;
+}
+
+#module a.collapsed:after {
+  content: "+ Show More";
+}
+
+#module a:not(.collapsed):after {
+  content: "- Show Less";
+}
+
+#module #collapseExample.collapse:not(.show) {
+  display: block;
+  /* height = lineheight * no of lines to display */
+  height: 4.5em;
+  overflow: hidden;
+}
+
+#module #collapseExample.collapsing {
+  height: 4.5em;
+}
+
+.collapse {
+  width: 800px;
+}
