--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -1,63 +1,115 @@
-  <div id="carouselExampleControls" class="carousel slide mb-5" data-ride="carousel">
-  <div class="carousel-inner bg-black">
-    <div class="carousel-item active ">
-      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+<div
+  id="carouselExampleControls"
+  class="carousel slide mb-5"
+  data-ride="carousel"
+>
+  <div class="carousel-inner bg-light">
+    <div class="carousel-item active">
+      <img
+        class="d-block w-50 carrousel"
+        src="<%= property_image_url(property)%>"
+        alt="First slide"
+      />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+      <img
+        class="d-block w-50 carrousel"
+        src="<%= property_image_url(property)%>"
+        alt="First slide"
+      />
     </div>
     <div class="carousel-item">
-      <img class="d-block w-50 carrousel" src="<%= property_image_url(property)%>" alt="First slide">
+      <img
+        class="d-block w-50 carrousel"
+        src="<%= property_image_url(property)%>"
+        alt="First slide"
+      />
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a
+    class="carousel-control-prev"
+    href="#carouselExampleControls"
+    role="button"
+    data-slide="prev"
+  >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon black  " aria-hidden="true"></span>
+  <a
+    class="carousel-control-next"
+    href="#carouselExampleControls"
+    role="button"
+    data-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
 
-
 <div class="container">
   <div class="row">
-    <div class="col-8">
-      <p>
-        <strong>Name:</strong>
-        <%= property.name %>
+    <div class="col-6">
+      <p class=""><%= @property.address %></p>
+      <p class="h2">
+        <%= @property.price > 0 ? number_to_currency(@property.price, precision:
+        0) : "For sale" %>
       </p>
-
-      <p>
-        <strong>Address:</strong>
-        <%= property.address %>
-      </p>
-
-      <p>
-        <strong>Price:</strong>
-        <%= property.price %>
-      </p>
-
-      <p>
-        <strong>Rooms:</strong>
-        <%= property.rooms %>
-      </p>
-
-      <p>
-        <strong>Square meters:</strong>
-        <%= property.square_meters %>
-      </p>
-
-      <p>
-        <strong>Bathrooms:</strong>
-        <%= property.bathrooms %>
-      </p>
-
     </div>
 
-    <div class="col-3">
-      <%= render "properties/agent_details" %>
+    <div class="col-3 text-center bg-light">
+      <div class="row">
+        <div class="col">
+          <p class="m-0">Rooms</p>
+          <span class="lead"><%= @property.rooms %></span>
+        </div>
+
+        <div class="col">
+          <p class="m-0">Bathrooms</p>
+          <span class="lead"><%= @property.bathrooms %></span>
+        </div>
+
+        <div class="col">
+          <p class="m-0">M2</p>
+          <span class="lead"><%= @property.square_meters %></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col"><%= render 'agent_details' %></div>
+  </div>
+
+  <div class="row border-top border-bottom pt-4 pb-4 mt-4 mb-5">
+    <div class="col-6">
+      <strong class="text-success"
+        >Calculate your loan with:
+        <a
+          style="text-decoration: none; color: black"
+          href="https://calculadora-coder.netlify.app/"
+          >Calculin</a
+        ></strong
+      >
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="h2"><%= property.name %></p>
+      <div id="prop-details">
+        <div id="module">
+          <h3>More info:</h3>
+          <p class="collapse" id="collapseExample" aria-expanded="false">
+            <%= property.details %>
+          </p>
+          <a
+            role="button"
+            class="collapsed"
+            data-toggle="collapse"
+            href="#collapseExample"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+          ></a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
