--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -3,28 +3,24 @@
   class="carousel slide mb-5"
   data-ride="carousel"
 >
-  <div class="carousel-inner bg-light">
+  <div class="carousel-inner bg-dark">
     <div class="carousel-item active">
       <img
         class="d-block w-50 carrousel"
-        src="<%= property_image_url(property)%>"
+        src="<%= url_for(property.images[0])%>"
         alt="First slide"
       />
     </div>
+
+    <% property.images[1...].each do |p| %>
     <div class="carousel-item">
       <img
         class="d-block w-50 carrousel"
-        src="<%= property_image_url(property)%>"
+        src="<%= url_for(p)%>"
         alt="First slide"
       />
     </div>
-    <div class="carousel-item">
-      <img
-        class="d-block w-50 carrousel"
-        src="<%= property_image_url(property)%>"
-        alt="First slide"
-      />
-    </div>
+    <% end %>
   </div>
   <a
     class="carousel-control-prev"
@@ -48,15 +44,35 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-6">
+    <div class="col-7">
       <p class=""><%= @property.address %></p>
       <p class="h2">
         <%= @property.price > 0 ? number_to_currency(@property.price, precision:
         0) : "For sale" %>
       </p>
+
+      <div class="">
+        <p class="h2"><%= property.name %></p>
+        <div id="prop-details">
+          <div id="module">
+            <h3>More info:</h3>
+            <p class="collapse" id="collapseExample" aria-expanded="false">
+              <%= property.details %>
+            </p>
+            <a
+              role="button"
+              class="collapsed"
+              data-toggle="collapse"
+              href="#collapseExample"
+              aria-expanded="false"
+              aria-controls="collapseExample"
+            ></a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="col-3 text-center bg-light">
+    <div class="col-sm-3 text-center bg-light">
       <div class="row">
         <div class="col">
           <p class="m-0">Rooms</p>
@@ -88,28 +104,6 @@
           >Calculin</a
         ></strong
       >
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p class="h2"><%= property.name %></p>
-      <div id="prop-details">
-        <div id="module">
-          <h3>More info:</h3>
-          <p class="collapse" id="collapseExample" aria-expanded="false">
-            <%= property.details %>
-          </p>
-          <a
-            role="button"
-            class="collapsed"
-            data-toggle="collapse"
-            href="#collapseExample"
-            aria-expanded="false"
-            aria-controls="collapseExample"
-          ></a>
-        </div>
-      </div>
     </div>
   </div>
 </div>
