--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,50 @@
 <div class="container form-devise">
+  <h2>Sign up</h2>
 
-    <h2>Sign up</h2>
+  <%= form_for(resource, as: resource_name, url:
+  registration_path(resource_name), data: { turbo: false }) do |f| %>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="form-outline mb-4">
+    <%= f.label :first_name %> <br />
+    <%= f.text_field :first_name, autofocus: true, class:"form-control" %>
+  </div>
 
-      <div class="form-outline mb-4">
-        <%= f.label :first_name %> <br>
-        <%= f.text_field :first_name, autofocus: true, class:"form-control" %>
-      </div>
+  <div class="form-outline mb-4">
+    <%= f.label :last_name %> <br />
+    <%= f.text_field :last_name, autofocus: true, class:"form-control"%>
+  </div>
 
-      <div class="form-outline mb-4">
-        <%= f.label :last_name %> <br>
-        <%= f.text_field :last_name, autofocus: true, class:"form-control"%>
-      </div>
+  <div class="form-outline mb-4">
+    <%= f.label :company %><br />
+    <%= f.text_field :company, autofocus: true, class:"form-control" %>
+  </div>
 
-      <div class="form-outline mb-4">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
-      </div>
+  <div class="form-group">
+    <%= f.label :avatar %> <%= f.file_field :avatar %>
+  </div>
 
-      <div class="form-outline mb-4">
-        <%= f.label :password %>
-        
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <br />
-        <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
-      </div>
+  <div class="form-outline mb-4">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",
+    class:"form-control" %>
+  </div>
 
-      <div class="form-outline mb-4">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
-      </div>
+  <div class="form-outline mb-4">
+    <%= f.label :password %>
 
-        <%= f.submit "Sign up", class:"btn btn-primary btn-block mb-4" %>
-          <div>
-            <%= render "devise/shared/links" %>
-          </div>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <br />
+    <%= f.password_field :password, autocomplete: "new-password",
+    class:"form-control" %>
+  </div>
+
+  <div class="form-outline mb-4">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password",
+    class:"form-control" %>
+  </div>
+
+  <%= f.submit "Sign up", class:"btn btn-primary btn-block mb-4" %>
+  <div><%= render "devise/shared/links" %></div>
 </div>
-    <% end %>
-
-
+<% end %>
