Posibilidad de agregar más de una imagen a property

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,61 +1,77 @@
-<%= form_with(model: property, class: "contents") do |form| %>
-  <% if property.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(property.errors.count, "error") %> prohibited this property from being saved:</h2>
+<%= form_with(model: property, class: "contents") do |form| %> <% if
+property.errors.any? %>
+<div
+  id="error_explanation"
+  class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3"
+>
+  <h2>
+    <%= pluralize(property.errors.count, "error") %> prohibited this property
+    from being saved:
+  </h2>
 
-      <ul>
-        <% property.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <ul>
+    <% property.errors.each do |error| %>
+    <li><%= error.full_message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="my-5">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :name %> <%= form.text_field :name, class: "block shadow
+  rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
 
-  <div>
-    <%= form.file_field :images, multiple: true %>
-  </div>
+<% 5.times do %>
 
-  <div class="my-5">
-    <%= form.label :address %>
-    <%= form.text_field :address, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div><%= form.file_field :images, multiple: true %></div>
+<% end %>
 
-  <div class="my-5">
-    <%= form.label :price %>
-    <%= form.number_field :price, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :address %> <%= form.text_field :address, class: "block shadow
+  rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
 
-  <div class="my-5">
-    <%= form.label :rooms %>
-    <%= form.number_field :rooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :price %> <%= form.number_field :price, class: "block shadow
+  rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
 
-  <div class="my-5">
-    <%= form.label :square_meters %>
-    <%= form.number_field :square_meters, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :rooms %> <%= form.number_field :rooms, class: "block shadow
+  rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
 
-  <div class="my-5">
-    <%= form.label :bathrooms %>
-    <%= form.number_field :bathrooms, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :square_meters %> <%= form.number_field :square_meters, class:
+  "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2
+  w-full form-control" %>
+</div>
 
-  <div class="my-5">
-    <%= form.label :parking_spaces %>
-    <%= form.number_field :parking_spaces, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :bathrooms %> <%= form.number_field :bathrooms, class: "block
+  shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
 
-  <div class="my-5">
-    <%= form.label :details %>
-    <%= form.text_field :details, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full form-control" %>
-  </div>
+<div class="my-5">
+  <%= form.label :parking_spaces %> <%= form.number_field :parking_spaces,
+  class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2
+  mt-2 w-full form-control" %>
+</div>
 
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium cursor-pointer btn-success" %>
-  </div>
+<div class="my-5">
+  <%= form.label :details %> <%= form.text_field :details, class: "block shadow
+  rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full
+  form-control" %>
+</div>
+
+<div class="inline">
+  <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 inline-block
+  font-medium cursor-pointer btn-success" %>
+</div>
 <% end %>
