--- a/app/views/public/main.html.erb
+++ b/app/views/public/main.html.erb
@@ -1,16 +1,14 @@
 <main role="main">
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="display-3">Find your new home...</h1>
-            <p>You can find your new home at the best price in this website.</p>
-        </div>
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">Find your new home...</h1>
+      <p>You can find your new home at the best price in this website.</p>
     </div>
+  </div>
 </main>
 
 <section id="latest-properties" class="mb-5">
-    <div class="container">
-        <div class="row grid">
-            <%= render "properties/latest_properties" %>
-        </div>
-    </div>
+  <div class="container">
+    <div class="row grid"><%= render "properties/latest_properties" %></div>
+  </div>
 </section>
