--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -30,3 +30,15 @@
 .collapse {
   width: 800px;
 }
+
+.property-latest-img {
+  width: 100%;
+  height: 220px;
+  background-size: cover;
+}
+
+.link-latest {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
