--- a/app/views/layouts/nav/_sidebar.html.erb
+++ b/app/views/layouts/nav/_sidebar.html.erb
@@ -11,19 +11,27 @@
         <%= link_to "Dashboard", dashboard_path, class:"nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Properties", properties_path, class:"nav-link" %>
+        <%= link_to properties_path, class:"nav-link" do%>
+          <i class="fa fa-home"></i>
+          Properties
+        <% end %>
       </li>
 
       <li class="nav-item">
         <%= link_to edit_account_registration_path, class:"nav-link" do %>
-          <span data-feather="settings"></span>
-          Account settings
-       <% end %>
+        <i class="fa fa-user" ></i>
+        Account settings <% end %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
           <span data-feather="layers"></span>
-          Integrations
+          Viewing
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span data-feather="layers"></span>
+          Settings
         </a>
       </li>
     </ul>
@@ -31,35 +39,23 @@
     <h6
       class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"
     >
-      <span>Saved reports</span>
+      <span>Settings</span>
       <a class="d-flex align-items-center text-muted" href="#">
         <span data-feather="plus-circle"></span>
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Current month
-        </a>
+       <li class="nav-item">
+        <%= link_to edit_account_registration_path, class:"nav-link" do %>
+        <i class="fa fa-user" ></i>
+        Account settings <% end %>
       </li>
+
+
       <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Last quarter
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Social engagement
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          <span data-feather="file-text"></span>
-          Year-end sale
-        </a>
+        <%= link_to profile_path(current_account.id), class:"nav-link" do %>
+        <i class="fa fa-user" ></i>
+        My profile <% end %>
       </li>
     </ul>
   </div>
