--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -47,13 +47,11 @@
     <div class="col-7">
       <p class=""><%= @property.address %></p>
       <p class="h2">
-        <% if @property.status == "Sell" %>
-          <%= @property.price > 0 ? number_to_currency(@property.price, precision:
-          0) : "For sale" %>
-        <% else %>
-          <%= number_to_currency(@property.price, precision:0) %> monthly
+        <% if @property.status == "Sell" %> <%= @property.price > 0 ?
+        number_to_currency(@property.price, precision: 0) : "For sale" %> <%
+        else %> <%= number_to_currency(@property.price, precision:0) %> monthly
         <% end %>
-        </p>
+      </p>
 
       <div class="">
         <p class="h2"><%= property.name %></p>
