--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -45,11 +45,14 @@
 <div class="container">
   <div class="row">
     <div class="col-7">
-      <p class=""><%= @property.address %></p>
+      <p class="h3"> For <%= @property.status.downcase %></p>
+      <p class=""><%= @property.address %> </p>
       <p class="h2">
         <% if @property.status == "Sell" %> <%= @property.price > 0 ?
         number_to_currency(@property.price, precision: 0) : "For sale" %> <%
         else %> <%= number_to_currency(@property.price, precision:0) %> monthly
+        <p><strong>Available from: <%= @property.available_date.strftime("%a") %>,
+           <%= @property.available_date.day.ordinalize %> <%= @property.available_date.strftime("%b") %></strong></p>
         <% end %>
       </p>
 
@@ -57,7 +60,6 @@
         <p class="h2"><%= property.name %></p>
         <div id="prop-details">
           <div id="module">
-            <h3>More info:</h3>
             <p class="collapse" id="collapseExample" aria-expanded="false">
               <%= property.details %>
             </p>
@@ -115,6 +117,13 @@
           >Calculin</a
         ></strong
       >
+    </div>
+  </div>
+
+  <div class="row border-top border-bottom pt-4 pb-4 mt-4 mb-5">
+    <div class="col-6">
+      <iframe width="1300" height="450" style="border:0" loading="lazy" allowfullscreen 
+      src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJUXRyM1W_vJURyO0HpQLpj7I&key=AIzaSyACsIqn_KL6PX68QShBsBU_sa_v7UDr1ic"></iframe> 
     </div>
   </div>
 
