--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -43,10 +43,9 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <% if account_signed_in? %> <%= link_to "Log out",
-      destroy_account_session_path, data: { turbo_method: :delete,
-      turbo_confirm: "Are you sure?" }, class:"nav-link btn btn-danger
-      text-white" %> <% else %>
+      <% if account_signed_in? %> <%= button_to 'Sign Out',
+      destroy_account_session_path, method: :delete, class:"nav-link btn
+      btn-danger text-white"%> <% else %>
       <li class="nav-item">
         <%= link_to "Sign up", new_account_registration_path, class:"nav-link"
         %>
