--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -76,8 +76,8 @@
       </div>
     </div>
 
-    <div class="col-sm-3 text-center w-5 bg-light">
-      <div class="row">
+    <div class="col-sm-3 p-3 text-center">
+      <div class="row bg-light">
         <div class="col">
           <i class="fa fa-bed" aria-hidden="true"></i>
           <p class="m-0">Rooms</p>
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="col"><%= render 'agent_details' %></div>
+    <div class="col-2"><%= render 'agent_details' %></div>
   </div>
 
   <div class="row border-top border-bottom pt-4 pb-4 mt-4 mb-5">
