--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,6 +5,10 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 
 <div class="form-group"><%= f.label :avatar %> <%= f.file_field :avatar %></div>
 
+<div class="form-group">
+  <%= f.label :background_img %> <%= f.file_field :background_img %>
+</div>
+
 <div class="form-outline mb-4">
   <%= f.label :first_name %> <br />
   <%= f.text_field :first_name, autofocus: true, class:"form-control",
