--- a/app/views/properties/_agent_details.html.erb
+++ b/app/views/properties/_agent_details.html.erb
@@ -25,9 +25,9 @@
       <i class="fa fa-envelope"></i> Email me
     </button>
 
-    
     <div class="btn btn-success btn-block">
-      <i class="fa fa-envelope"></i> <%= link_to "My profile", profile_path(@agent.id), class:"text-white text-decoration-none " %>
+      <i class="fa fa-envelope"></i> <%= link_to "My profile",
+      profile_path(@agent.id), class:"text-white text-decoration-none " %>
     </div>
     <!-- Modal -->
     <div
