--- a/app/views/layouts/nav/_admin.html.erb
+++ b/app/views/layouts/nav/_admin.html.erb
@@ -15,7 +15,7 @@
   </li>
 
   <li class="nav-item">
-    <%= link_to edit_account_registration_path, class:"nav-link" do %>
+    <%= link_to posts_path, class:"nav-link" do %>
     <i class="fa fa-user"></i>
     Blog Post <% end %>
   </li>
