--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="form-group">
-   <%= form.file_field :images %> 
+   <%= form.file_field :image %> 
   </div>
 
   <div>
