Agregado de ultimos post a main view y fix de titulo latest properties main view

--- a/app/views/public/main.html.erb
+++ b/app/views/public/main.html.erb
@@ -9,6 +9,14 @@
 
 <section id="latest-properties" class="mb-5">
   <div class="container">
+    <h2>Latest properties</h2>
     <div class="row grid"><%= render "properties/property_list" %></div>
+  </div>
+</section>
+
+<section id="latest-posts" class="mb-5">
+  <div class="container">
+    <h2>Latest news</h2>
+    <div class="row grid"><%= render "posts/post_list" %></div>
   </div>
 </section>
