--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,42 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<div id="posts">
-  <% @posts.each do |post| %> <%= render post %>
-  <p><%= link_to "Show this post", post %></p>
-  <% end %>
+<div class="flex justify-between items-center">
+  <h1 class="font-bold text-4xl">Posts</h1>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<div id="posts" class="min-w-full">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Summary</th>
+        <th>Body</th>
+        <% if current_account.admin? %>
+        <th>Author</th>
+        <% end %>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.title %></td>
+        <td><%= post.body %></td>
+        <td><%= post.summary %></td>
+        <% if current_account.admin? %>
+        <th><%= post.account.first_name %></th>
+        <% end %>
+        <td>
+          <%= link_to 'Edit this post', edit_post_path(post),
+          class: "" %>
+        </td>
+        <td>
+          <%= link_to "Destroy", post, data: { turbo_method: :delete,
+          turbo_confirm: "Are you sure?" } %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= link_to 'New post', new_post_path, class: "btn btn-primary" %>
+</div>
+</div>
