--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -127,8 +127,17 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="h4 mb-5">More properties by <%=@agent.first_name %></div>
-    <div class="row"><%= render 'property_list'%></div>
-  </div>
+  <% if @properties.count > 1 %>
+    <div class="container">
+      <div class="h4 mb-5">Current listings</div>
+      <div class="row"><%= render 'properties/property_list'%></div>
+    </div>
+  <% end %>
+
+  <% if @posts.any?  %>
+    <div class="container">
+      <div class="h4 mb-5">News by this agent</div>
+      <div class="row"><%= render 'posts/post_list'%></div>
+    </div>
+  <% end %>
 </div>
