View, controller, route all properties

--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -41,7 +41,7 @@
           class:"dropdown-item" %> <%= link_to "For rent",
           properties_for_rent_path, class:"dropdown-item" %>
           <div class="dropdown-divider"></div>
-          <%= link_to "All properties", properties_for_sale_path,
+          <%= link_to "All properties", properties_all_path,
           class:"dropdown-item" %>
         </div>
       </li>
