Fix views dashboard: edición de cuentas y duplicacion de links

--- a/app/views/layouts/nav/_dashboard.html.erb
+++ b/app/views/layouts/nav/_dashboard.html.erb
@@ -3,16 +3,11 @@
   id="dashboard"
 >
   <%= link_to "Home", root_path, class:"nav-link text-white p-2" %>
-  <input
-    class="form-control form-control-dark w-100"
-    type="text"
-    placeholder="Search"
-    aria-label="Search"
-  />
+
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <%= button_to 'Sign Out', destroy_account_session_path, method: :delete,
-      class:"nav-link btn btn-danger text-white"%>
+      class:"nav-link btn btn-danger p-2 text-white"%>
     </li>
   </ul>
 </nav>
