--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,12 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container mt-4">
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
 html: { method: :put }) do |f| %> <%= devise_error_messages! %>
 
-<div class="form-group"><%= f.label :avatar %> <%= f.file_field :avatar %></div>
+<div class="form-outline mb-4"><%= f.label :avatar %> <%= f.file_field :avatar %></div>
 
-<div class="form-group">
+<div class="form-outline mb-4">
   <%= f.label :background_img %> <%= f.file_field :background_img %>
 </div>
 
@@ -68,14 +69,14 @@ html: { method: :put }) do |f| %> <%= devise_error_messages! %>
   class:"form-control" %>
 </div>
 
-<div class="actions"><%= f.submit "Update", class:"btn btn-success" %></div>
+<div class="actions mt-4"><%= f.submit "Update", class:"btn btn-success" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
 <p>
-  Unhappy? <%= button_to "Cancel my account", registration_path(resource_name),
+  <%= button_to "Cancel my account", registration_path(resource_name),
   data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger" %>
 </p>
 
 <%= link_to "Back", :back, class:"btn border" %>
+
+</div>
